1999-08-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp.h: Y2KFixes
	* libparse/parse.c: Ditto
	* ntpd/Makefile.am (check_PROGRAMS): Ditto
	* ntpd/refclock_acts.c: Ditto
	* ntpd/refclock_arc.c (arc_receive): Ditto
	* ntpd/refclock_heath.c: Ditto
	* ntpd/refclock_hpgps.c: Ditto
	* parseutil/Makefile.am (check-local): Ditto
	* parseutil/dcfd.c (check_y2k): Ditto
	* NOTES.y2kfixes: Ditto
	* readme.y2kfixes: Ditto
	* results.y2kfixes: Ditto
	* ntpd/check_y2k.c: Ditto
	From: y2k@y2k.labs.att.com

1999-08-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Look for sys/ppstime.h.

1999-07-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_io.c (create_sockets): Typo.
	From: Doug Wells <dmw@contek.com>

1999-07-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_struct_ntptimeval): Explicitly look for
	struct ntptimeval.
	(ac_cv_var_kernel_pll): Require struct ntptimeval.
	Linux.  Grrr.
	Reported by: Ronald Kuetemeier <ronaldk@smginc.com>

1999-07-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.95
	
	* ports/winnt: New release
	From: Sven Dietrich <Sven_Dietrich@trimble.com> 

1999-07-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libntp/machines.c (ntp_set_tod): Bugfix
	From: Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

1999-07-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.94b

	* acconfig.h:
	* configure.in:
	* libparse/Makefile.am:
	* libparse/parse_conf.c:
	* libparse/clk_varitext.c:
	* libparse/kclk_varitext.c:
	* ntpd/refclock_parse.c: VARITEXT parse clock
	* ntpdate/ntpdate.c: bugfix
	From: Tony McConnell <tonym@datel-technology.co.uk>

1999-07-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp_syscall.h (ntp_gettime): Make it static
	* configure.in: Added AC_C_INLINE
	Reported by: "Charles C. Fu" <ccwf@klab.caltech.edu>

1999-07-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntpd.h:
	* libntp/machines.c:
	* libntp/systime.c:
	* ntpd/ntp_config.c:
	* ntpd/ntp_filegen.c: