@@ -9,7 +9,11 @@ DISTCLEANFILES = .version version.c
 #EXTRA_DIST = ntpd.mak
 ETAGS_ARGS = Makefile.am
 ###							Y2Kfixes
-check_PROGRAMS = check_y2k
+check_PROGRAMS = @MAKE_CHECK_Y2K@
+EXTRA_PROGRAMS = check_y2k
+
+check-local: @MAKE_CHECK_Y2K@
+	[ -z "@MAKE_CHECK_Y2K@" ] || ./@MAKE_CHECK_Y2K@
 
 ntpd_SOURCES = map_vme.c ntp_config.c ntp_control.c ntp_io.c \
 	ntp_loopfilter.c ntp_monitor.c ntp_peer.c ntp_proto.c \
